# AI-Ninjas

./: .pre-commit-config.yaml  README.md  gradio bot.py  pyproject.toml
chat/: register_complaint.py
features/complaint_register/: enum.py  prompts.py
models/: get_model.py
secrets/: .env.watsonx
utils/: getters.py
